kubernetes/services/authelia/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    app: authelia
    type: authentication
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
